added subscription user service and fixed the docs
